--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,9 +7,10 @@ services:
     environment:
       QDRANT__SERVICE__GRPC_PORT: 6334
       QDRANT__SERVICE__HTTP_PORT: 6333
+      QDRANT__SERVICE__API_KEY: 0b7556edc9d0450aa24e74edd92f1d9776b1b3c452f7c2f17edf9cef92cfb1cb
     expose:
-      - "6333"  # HTTP API (internal)
-      - "6334"  # GRPC API (internal)
+      - "6333"  # HTTP API
+      - "6334"  # GRPC API
     volumes:
       - qdrant_storage:/qdrant/storage
     restart: always
